# encoins-core

./: .gitignore  README.md  cabal.project  encoins-core.cabal  hie.yaml
src/ENCOINS/Core/: BaseTypes.hs  Bulletproofs.hs  OffChain.hs  OnChain.hs  Types.hs
src/ENCOINS/Core/Bulletproofs/: Common.hs  Prove.hs  Types.hs  Utils.hs  Verify.hs
src/ENCOINS/Core/V1/: OffChain.hs  OnChain.hs
src/ENCOINS/Core/V1/OffChain/: ENCS.hs  Fees.hs  Modes.hs
src/ENCOINS/Core/V1/OnChain/: Aiken.hs  Internal.hs  Plutus.hs
src/ENCOINS/Core/V1/OnChain/Aiken/: UPLC.hs
test/: Gen.hs  Internal.hs  Main.hs  Script.hs  Tx.hs  testConfig.json  verifierPKH.json
test/Tests/: Verification.hs
test/configuration/: testConfig.json  verifierPKH.json
test/specifications/: fail1.json  spec1 copy.json
