cabal-version:      3.0

name:               encoins-core
version:            0.1.0.0

author:             Vladimir Sinyakov
maintainer:         team@encoins.io


-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      ENCOINS.Core.OffChain
      ENCOINS.Core.OnChain
      ENCOINS.Core.V1.OffChain
      ENCOINS.Core.V1.OffChain.ENCS
      ENCOINS.Core.V1.OnChain
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-crypto-class                   -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-core                    -any,
      cborg                                  -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      encoins-bulletproofs                   -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      hex-text                               -any,
      lens                                   -any,
      mtl                                    -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-contract                        -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      plutus-use-cases                       -any,
      prettyprinter                          -any,
      purescript-bridge                      -any,
      QuickCheck                             -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      text                                   -any,
      uuid                                   -any
    hs-source-dirs: src

test-suite encoins-core-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  Build-Depends:
    base                                     -any,
    aeson                                    -any,
    bytestring                               -any,
    cardano-api                              -any,
    containers                               -any,
    encoins-bulletproofs                     -any,
    encoins-core                             -any,
    generic-arbitrary                        -any,
    hex-text                                 -any,
    plutus-apps-extra                        -any,
    plutus-contract                          -any,
    plutus-chain-index                       -any,
    plutus-chain-index-core                  -any,
    plutus-tx-plugin                         -any,
    plutus-tx                                -any,
    plutus-tx-extra                          -any,
    plutus-ledger                            -any,
    plutus-ledger-api                        -any,
    plutus-ledger-constraints                -any,
    plutus-script-utils                      -any,
    plutus-use-cases                         -any,
    QuickCheck                               -any,
    random                                   -any,
    text                                     -any
